--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
  	"dependencies": {
 		"express": "4.x",
-        "serve-favicon": "2.1.5",
-        "morgan": "1.3.2",
-        "serve-static": "1.6.4"
+		"serve-favicon": "2.1.5",
+		"morgan": "1.3.2",
+		"serve-static": "1.6.4",
+		"mysql": "2.5.3"
 	}
 }
